<resources>
    <string name="app_name">Fnews</string>
    <string name="sign_up">Đăng ký</string>
    <string name="email">Email</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="sign_up_cap">Đăng Ký</string>
    <string name="policy">Để đăng ký bạn cần chấp nhận điều khoản của chúng tôi</string>
    <string name="sign_in_with">Đăng nhập với</string>
    <string name="have_not_account">Bạn chưa có tài khoản?</string>
    <string name="for_get_password">Quên mật khẩu?</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="confirm">Xác Nhận</string>
    <string name="enter_code">Nhập mã</string>
    <string name="enter_email">Nhập email của bạn</string>
    <string name="take_code">Lấy mã</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_password">Nhập mật khẩu mới</string>
    <string name="confirm_new_password">Nhập lại mật khẩu mới</string>
    <string name="change_password">Đổi Mật Khẩu</string>
    <string name="skip">Bỏ qua</string>
    <string name="next">Tiếp tục</string>
    <string name="welcome1_til">Chào mừng đến Fnews.</string>
    <string name="welcome1_des">Cung cấp các tin tức chính xác, thú vị và nhanh chóng về cuộc sống của Polyer.</string>
    <string name="welcome2_til">Rõ ràng và nhanh chóng.</string>
    <string name="welcome2_des">Phân các mục báo rõ ràng và tiếp cận nhanh chóng các bài báo quan tâm</string>
    <string name="welcome3_til">Chính xác và văn minh</string>
    <string name="welcome3_des">Thông tin kiểm duyệt rõ ràng,  tự do ngôn luận một cách văn minh - lịch sự</string>
    <string name="personal">Cá nhân</string>
    <string name="saved">Xem sau</string>
    <string name="seen">Đã xem</string>
    <string name="like">Yêu thích</string>
    <string name="my_comment">Bình luận của tôi</string>
    <string name="email_linking">Liên kết email</string>
    <string name="change_password_no_cap">Đổi mật khẩu</string>
    <string name="sign_out">Đăng Xuất</string>
    <string name="share">Chia sẻ</string>
    <string name="seen_news">Tin đã xem</string>
    <string name="saved_news">Tin đã lưu</string>
    <string name="liked_news">Tin đã thích</string>
    <string name="current_password">Nhập mật khẩu hiện tại</string>
    <string name="verify_account">Xác nhận tài khoản</string>
    <string name="verify">Xác nhận</string>
    <string name="change_email">Đổi email</string>
    <string name="current_email">Email hiện tại:</string>
    <string name="new_email">Nhập email mới</string>
    <string name="notification">Thông báo</string>
    <string name="minute_time_format">%d phút trước</string>
    <string name="hour_time_format">%d giờ trước</string>
    <string name="day_time_format">%d ngày trước</string>
    <string name="just_time">Vừa xong</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit dolor sit amet, consectetur adipiscing elit.</string>
    <string name="delete_notify">Xóa thông báo này</string>
    <string name="prevent_notify">Tắt thông báo cho bài viết này</string>

    <string name="facebook_app_id">505141825148341</string>
    <string name="fb_login_protocol_scheme">fb505141825148341</string>
    <string name="facebook_client_token">024cb64e2fe91ad4639a464fcfb91803</string>

    <string name="empty_username">Vui lòng nhập tên đăng nhập</string>
    <string name="invalid_username">Vui lòng nhập tên đăng nhập từ 6 kí tự trở lên</string>
    <string name="empty_password">Vui lòng nhập mật khẩu</string>
    <string name="invalid_password">Vui lòng nhập mật khẩu từ 8 kí tự trở lên, có kí tự viết hoa và kí tự đặc biệt</string>
    <string name="empty_email">Vui lòng nhập email</string>
    <string name="invalid_email">Vui lòng nhập đúng định dạng email</string>
    <string name="confirm_password_false">Mật khẩu xác nhận không trùng khớp</string>
    <string name="login_fail">Vui lòng kiểm tra lại tên đăng nhập hoặc mật khẩu</string>
    <string name="facebook_fail">Tài khoản facebook không khả dụng</string>
    <string name="google_fail">Tài khoản google không khả dụng</string>
    <string name="invalid_confirm_password">Mật khẩu xác nhận không trùng khớp</string>
    <string name="invalid_check_policy">Bạn cần chấp nhận điều khoản của chúng tôi để tiếp tục đăng ký tài khoản.</string>
    <string name="register_success">Đăng ký thành công!</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="watch_email_to_find_password">Vui lòng kiểm tra email để thay đổi mật khẩu mới!</string>
    <string name="ok">Đồng ý</string>
    <string name="begin_app">Bắt đầu</string>
    <string name="news">Tin tức</string>
    <string name="video">Video</string>
    <string name="trending">Xu hướng</string>

    //
    <string name="watch_news">Xem tin</string>
    <string name="read_news">Đọc báo</string>
    <string name="hear_news">Nghe báo</string>
    <string name="comment_news">Bình luận</string>
    <string name="channel_description">This a notifcation for informing news</string>
    <string name="relative_new">Bài viết liên quan</string>
    <string name="interesting">Quan tâm</string>
    <string name="_new">Mới nhất</string>
    <string name="enter_comment">Nhập bình luận của bạn …</string>
    <string name="view_more_comment">Xem thêm %d bình luận</string>

</resources>